--- a/be/src/main/resources/application.yml
+++ b/be/src/main/resources/application.yml
@@ -19,3 +19,4 @@ spring:
       platform: h2
       mode: always
       schema-locations: classpath:sql/ddl-h2.sql
+      data-locations: classpath:sql/test/*.sql
