--- a/ios/TodoApp/TodoApp/Supporting Files/Info.plist
+++ b/ios/TodoApp/TodoApp/Supporting Files/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>SERVER_BASE_URL</key>
 	<string>https://1dc4c2f3-00b4-446d-a22a-d6920eaee622.mock.pstmn.io</string>
 	<key>UIApplicationSceneManifest</key>
